update support rest style.